--- a/PoCProject/src/main/java/views/mng/CapNhatCoSoVatChatFrame.form
+++ b/PoCProject/src/main/java/views/mng/CapNhatCoSoVatChatFrame.form
@@ -162,7 +162,7 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
             <StringItem index="0" value="H&#x1ed9;i tr&#x1b0;&#x1edd;ng"/>
-            <StringItem index="1" value="Ph&#xf2;ng 1"/>
+            <StringItem index="1" value="Ph&#xf2;ng ch&#x1ee9;c n&#x103;ng 1"/>
           </StringArray>
         </Property>
       </Properties>
