--- a/PoCProject/src/main/java/views/mng/ThemSuKienFrame.form
+++ b/PoCProject/src/main/java/views/mng/ThemSuKienFrame.form
@@ -90,7 +90,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="dateTimePickerFinish" alignment="0" pref="348" max="32767" attributes="0"/>
+                              <Component id="dateTimePickerFinish" alignment="0" max="32767" attributes="0"/>
                               <Component id="dateTimePickerStart" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
@@ -159,10 +159,13 @@
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
                 <StringItem index="0" value="H&#x1ed9;i tr&#x1b0;&#x1edd;ng"/>
-                <StringItem index="1" value="Ph&#xf2;ng 1"/>
+                <StringItem index="1" value="Ph&#xf2;ng ch&#x1ee9;c n&#x103;ng 1"/>
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox1ActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
